Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-247

[C++] Missing explicit destructor in RowBatchReader causes an incomplete type error

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • 0.1.0
    • C++
    • None

    Description

      clang compiler emits the below error.

      In file included from 
      ${ARROW_HOME}/include/arrow/ipc/adapter.h:25:
      /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:2514:27: error: invalid application of 'sizeof' to an incomplete type 'arrow::ipc::RowBatchReader::Impl'
                  static_assert(sizeof(_Tp) > 0, "default_delete can not delete incomplete type");
                                ^~~~~~~~~~~
      /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:2715:13: note: in instantiation of member function 'std::__1::default_delete<arrow::ipc::RowBatchReader::Impl>::operator()' requested here
                  __ptr_.second()(__tmp);
                  ^
      /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/memory:2683:46: note: in instantiation of member function 'std::__1::unique_ptr<arrow::ipc::RowBatchReader::Impl, std::__1::default_delete<arrow::ipc::RowBatchReader::Impl> >::reset' requested here
          _LIBCPP_INLINE_VISIBILITY ~unique_ptr() {reset();}
                                                   ^
      /Users/jihoon/Projects/arrow/install//include/arrow/ipc/adapter.h:73:20: note: in instantiation of member function 'std::__1::unique_ptr<arrow::ipc::RowBatchReader::Impl, std::__1::default_delete<arrow::ipc::RowBatchReader::Impl> >::~unique_ptr' requested here
      class ARROW_EXPORT RowBatchReader {
                         ^
      ${ARROW_HOME}/include/arrow/ipc/adapter.h:87:9: note: forward declaration of 'arrow::ipc::RowBatchReader::Impl'
        class Impl;
              ^
      1 error generated.
      

      Attachments

        Activity

          People

            jihoonson Jihoon Son
            jihoonson Jihoon Son
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: