ARROW-247: Missing explicit destructor in RowBatchReader causes an incomplete type error

Author: Jihoon Son <jihoonson@apache.org>

Closes #111 from jihoonson/ARROW-247 and squashes the following commits:

cc7281c [Jihoon Son] Make destructor virtual
795d3d3 [Jihoon Son] Merge branch 'master' of https://github.com/apache/arrow into ARROW-247
df297ef [Jihoon Son] Trigger travis
65d64c8 [Jihoon Son] Make the comment into two line
9555260 [Jihoon Son] Add a comment
f671a32 [Jihoon Son] Add explicit destructor for RowBatchReader